<resources>
    <string name="app_name">IMAD exam</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="welcome_to_campsite_commander">Welcome to Campsite Commander</string>
    <string name="created_by_ruvay_ramdhin_st10522098">Created by Ruvay Ramdhin: ST10522098</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="home_screen">Home Screen</string>
    <string name="add_gear">Add Gear</string>
    <string name="enter_your_item">Enter your item</string>
    <string name="enter_the_amount_of_items">Enter the amount of items</string>
    <string name="enter_the_amount_of_shelter_items_being_brought">Enter the amount of shelter items being brought</string>
    <string name="enter_how_much_food_you_are_bringing">Enter how much food you are bringing</string>
    <string name="enter_how_many_safety_items_you_are_bringing">Enter how many safety items you are bringing</string>
    <string name="please_enter_the_items_you_have_brought">Please enter the items you have brought</string>
    <string name="please_enter_the_shelter_item_you_brought">Please enter the shelter item you brought</string>
    <string name="please_enter_the_enter_food_item_you_brought">Please enter the enter food item you brought</string>
    <string name="please_enter_teh_food_item_you_brought">Please enter teh food item you brought</string>
    <string name="please_the_food_item_you_brought">Please the food item you brought</string>
    <string name="please_enter_the_safety_item_you_have_brought">Please enter the safety item you have brought</string>
    <string name="see_information">See information</string>
    <string name="save_description">Save description</string>
    <string name="please_describe_what_you_have">Please describe what you have</string>
    <string name="please_enter_what_item_your_are_bringing">Please enter what item your are bringing</string>
    <string name="please_enter_the_number_of_things_you_are_brought">please enter the number of things you are brought</string>
    <string name="all_your_results_will_display_here">All your results will display here</string>
    <string name="view_gear_loaded">View gear loaded</string>
    <string name="back_to_main_screen">Back to main screen</string>
</resources>